Slightly modified Header and Footer CSS to make them more visible in dark as well as in light mode + Tried to solve the CaseStudy invisible component issue...

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,12 +3,14 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  bottom: 0;
   width: 100%;
 }
 
 .myFooter-light {
-  background-color: rgb(255,255,255);
-  color: rgb(0,0,0);
+  background-color: rgb(200,200,200);
+  color: rgb(50,50,50);
 }
   
 .myFooter-light > p {
@@ -16,8 +18,8 @@
 }
 
 .myFooter-dark {
-  background-color: rgb(0,0,0);
-  color: rgb(255,255,255);
+  background-color: rgb(50,50,50);
+  color: rgb(200,200,200);
 }
 
 .myFooter-dark > p {
